--- a/bookmark.html
+++ b/bookmark.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bookmark Saver</title>
 </head>
+  
 <body>
+  
   <h2>Bookmark Your Favorite Websites</h2>
   <input type="text" id="siteName" placeholder="Website Name">
   <input type="text" id="siteURL" placeholder="https://example.com">
